tests/paczka1/small_fuzzy/29825709.err
Error in line 6: LzblXDyU1V A204 85,0
Error in line 8: LzblXDyU1V S400 79,9
Error in line 9: naOT7MMKsZ A204 66,7
